--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": "password2727",
-    "database": "well_db",
+    "password": "",
+    "database": "",
     "host": "localhost",
     "dialect": "mysql"
   },
