--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "faker": "^4.1.0",
     "firebase": "^5.8.1",
     "firebase-admin": "^6.5.1",
     "mysql2": "^1.5.3",
