--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^5.8.1",
     "firebase-admin": "^6.5.1",
     "mysql2": "^1.5.3",
+    "npm": "^6.7.0",
     "sequelize": "^4.38.0"
   },
   "devDependencies": {
