--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
     "faker": "^4.1.0",
     "firebase": "^5.8.1",
     "firebase-admin": "^6.5.1",
